[gd_scene load_steps=7 format=2]

[ext_resource path="res://assets/Figur1.png" type="Texture" id=1]
[ext_resource path="res://Guest.gd" type="Script" id=2]

[sub_resource type="PhysicsMaterial" id=4]
absorbent = true

[sub_resource type="CircleShape2D" id=5]
radius = 124.702

[sub_resource type="CapsuleShape2D" id=3]
radius = 8.77205
height = 12.6548

[sub_resource type="CapsuleShape2D" id=6]
radius = 4.71085
height = 5.19882

[node name="Guest" type="RigidBody2D" groups=[
"Guest",
]]
collision_layer = 3
collision_mask = 3
mass = 10.0
physics_material_override = SubResource( 4 )
gravity_scale = 0.0
angular_damp = 100.0
script = ExtResource( 2 )
__meta__ = {
"_edit_horizontal_guides_": [  ]
}

[node name="ExclusionZone" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="ExclusionZone"]
modulate = Color( 0.0823529, 1, 0.027451, 1 )
show_behind_parent = true
shape = SubResource( 5 )
disabled = true

[node name="Sprite" type="Sprite" parent="."]
scale = Vector2( 0.1, 0.1 )
texture = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
modulate = Color( 0, 1, 0.976471, 1 )
shape = SubResource( 3 )
disabled = true

[node name="PickUpArea" type="Area2D" parent="."]
modulate = Color( 1, 0, 0.984314, 1 )
scale = Vector2( 2.76, 2.6 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="PickUpArea"]
shape = SubResource( 6 )

[node name="Anchor" type="Position2D" parent="."]

[connection signal="area_entered" from="PickUpArea" to="." method="_on_PickUpArea_area_entered"]
[connection signal="body_entered" from="PickUpArea" to="." method="_on_PickUpArea_body_entered"]
